[gd_scene load_steps=15 format=3 uid="uid://u2j1t4psnbv4"]

[ext_resource type="Script" path="res://scripts/inventory/shanghai_doll_main.gd" id="1_pju3x"]
[ext_resource type="Texture2D" uid="uid://peh1mjqcrlmx" path="res://sprites/items/item_spawnables/shanghai_doll_anims.png" id="2_6mv5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6jjd"]
bg_color = Color(0, 0, 0, 0.258824)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_tgksv"]
atlas = ExtResource("2_6mv5a")
region = Rect2(0, 0, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_2woti"]
atlas = ExtResource("2_6mv5a")
region = Rect2(8, 0, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qrop"]
atlas = ExtResource("2_6mv5a")
region = Rect2(16, 0, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ajjg"]
atlas = ExtResource("2_6mv5a")
region = Rect2(0, 12, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bhnh"]
atlas = ExtResource("2_6mv5a")
region = Rect2(8, 12, 8, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovulk"]
atlas = ExtResource("2_6mv5a")
region = Rect2(16, 12, 8, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_1kj04"]
animations = [{
"frames": [SubResource("AtlasTexture_tgksv"), SubResource("AtlasTexture_2woti"), SubResource("AtlasTexture_4qrop"), SubResource("AtlasTexture_3ajjg"), SubResource("AtlasTexture_1bhnh"), SubResource("AtlasTexture_ovulk")],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qgtd6"]
radius = 2.23607

[sub_resource type="Animation" id="Animation_7tpam"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Shanghai:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_junwb"]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-5, 0), Vector2(-3, 3), Vector2(-1, 4), Vector2(2, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lfka"]
_data = {
"attack": SubResource("Animation_junwb"),
"fade_out": SubResource("Animation_7tpam")
}

[node name="Shanghai_Doll_Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_pju3x")

[node name="main_body" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="main_body"]
offset_left = -2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c6jjd")

[node name="Shanghai" type="AnimatedSprite2D" parent="main_body"]
frames = SubResource("SpriteFrames_1kj04")

[node name="Area2D" type="Area2D" parent="main_body"]
position = Vector2(-5, 0)
collision_layer = 8
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/Area2D"]
shape = SubResource("CircleShape2D_qgtd6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3lfka")
}

[connection signal="animation_finished" from="main_body/Shanghai" to="." method="_on_shanghai_animation_finished"]
[connection signal="body_entered" from="main_body/Area2D" to="." method="_on_area_2d_body_entered"]
